--- a/17647d54a75d437caad9e727a67d51cc.opf/meta.yml
+++ b/17647d54a75d437caad9e727a67d51cc.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     d1a4e6d6ea504592a37f9ffb0d3b357e:
       base_file: v018.txt
       image_group_id: I1PD95863
-      title: ''
+      title: རྡོ་རྗེ་སེམས་དཔའི་སྒྲུབ་ཐབས།
       total_pages: 1634
       volume_number: 18
